<resources>
    <!--Configuracion-->
    <string name="app_name">ComSafe</string>
    <string name="project_name">ComSafe Mobile Client</string>
    <string name="app_version">0.0.1</string>
    <string name="developedApp">Aplicación desarrollada por:</string>
    <string name="developer1">Gustavo López González</string>
    <string name="developedWeb">Sitio web desarrollado por:</string>
    <string name="developer2">Victor Eduardo Ceja Martínez</string>
    <string name="developer3">Aurora Méndez Castañeda</string>
    <string name="developer4">Pedro Morales González</string>
    <string name="tvTitleAbout">Acerca de</string>

    <!--Login screen-->
    <string name="tvTitleLogin">Iniciar Sesión</string>
    <string name="etHintCorreo">Correo electrónico</string>
    <string name="etHintContrasena">Contraseña</string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="btnForgot">Olvidé mi contraseña</string>
    <string name="btnAccount">No tengo una cuenta</string>
    <string name="copyright">©️ ComSafe 2022</string>
    <string name="dialog_create_account_msj">Para crear su cuenta, acuda a las oficinas administrativas con su último comprobante de pago
y de domicilio.</string>
    <string name="dialog_login_error_msj">Usuario o contraseña incorrectos.</string>
    <string name="dialog_com_error_msj">Error al conectarse con el servicio en línea.</string>

    <!--Forgot password screen-->
    <string name="tvTitleForgot">Recuperar contraseña</string>
    <string name="tvInstructionsForgot">Introduce el correo electrónico con el que inicias sesión, luego, presiona "Enviar".</string>
    <string name="btnSend">Enviar</string>

    <!--Main menu-->
    <string name="tvTitleMainMenu">Inicio</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="btnMore">Ver más &#8230;</string>
    <string name="visitas">Visitas</string>
    <string name="reservas">Reservas</string>
    <string name="automoviles">Automóviles</string>

    <!--Profile-->
    <string name="tvTitleProfile">Mi información</string>
    <string name="tvNombreProfile">Nombre de usuario</string>
    <string name="tvSubtitle1">Número de contrato</string>
    <string name="tvSubtitle2">Datos de usuario</string>
    <string name="tvInfo1">7635280001-</string>
    <string name="tvInfo2">CURP</string>
    <string name="tvInfo3">Fecha de nacimiento</string>
    <string name="tvInfo4">Sexo</string>
    <string name="btnEditar">Editar</string>
    <string name="btnLogout">Cerrar sesión</string>
    <string name="ContratoCopied">Número de contrato copiado al portapapeles</string>

    <!--Edit profile-->
    <string name="tvTitleEditProfile">Editar información personal</string>
    <string-array name="sexArray">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>
    <string name="btnCancel">Cancelar</string>
    <string name="btnSave">Guardar</string>

    <!--Visitas-->
    <string name="tvTitleVisitas">Visitas</string>
    <string name="tvSubtitleVisitas">Historial de visitas</string>
    <string name="tvInstructionsVisitas">Seleccione una visita que aún no haya finalizado para editarla o registre una nueva con el botón +.</string>
    <string name="tvEmptyVisitList">Ninguna visita registrada para esta cuenta.</string>
    <string name="tvTitleVisitEdit">Editar visita</string>
    <string name="tvVisitIdTag">ID de visita</string>
    <string name="tvVisitNameTag">Nombre(s)</string>
    <string name="tvVisitPaternTag">Apellido paterno</string>
    <string name="tvVisitMaternTag">Apellido materno</string>
    <string name="tvVisitDateTag">Fecha de visita</string>
    <string name="tvVisitMediumTag">Medio de llegada</string>
    <string name="tvVisitPlatesTag">Placas de vehículo de llegada</string>
    <string name="medio1">AUTOMOVIL</string>
    <string name="medio2">TRANSPORTE PÚBLICO</string>
    <array name="mediumArray">
        <item>@string/medio1</item>
        <item>@string/medio2</item>
    </array>
    <string name="tvTitleVisitAdd">Registrar visita</string>

    <!--Reservas-->
    <string name="tvTitleReservas">Reservas</string>
    <string name="tvSubtitleReservas">Historial de reservas</string>
    <string name="tvInstructionsReservas">Seleccione una reserva que aún no haya ocurrido para editarla o reserve un área con el botón +.</string>

    <!--Automoviles-->
    <string name="tvTitleAutomoviles">Automóviles</string>
    <string name="tvSubtitleAutomoviles">Automoviles registrados</string>
    <string name="tvInstructionsAutomoviles">Seleccione uno de sus automoviles para modificar su información o agregue uno nuevo con el botón +.</string>
    <string name="dialog_session_error_msj">El usuario activo no tiene CURP asociada. Cierre sesión y vuelva a intentarlo.</string>
    <string name="tvEmptyCarList">Ningún automóvil registrado en esta cuenta.</string>
    <string name="tvTitleCarEdit">Editar automóvil</string>
    <string name="tvBrandTag">Marca de automóvil</string>
    <string name="tvModelTag">Modelo de automóvil</string>
    <string name="tvPlatesTag">Placas del automóvil</string>
    <string name="tvCarColorTag">Color del automóvil</string>
    <string name="strColorRed">ROJO</string>
    <string name="strColorBlue">AZUL</string>
    <string name="strColorCyan">CYAN</string>
    <string name="strColorGuinda">GUINDA</string>
    <string name="strColorWhite">BLANCO</string>
    <string name="strColorGray">GRIS</string>
    <string name="strColorGreen">VERDE</string>
    <array name="carColors">
        <item>@string/strColorRed</item>
        <item>@string/strColorBlue</item>
        <item>@string/strColorCyan</item>
        <item>@string/strColorGuinda</item>
        <item>@string/strColorWhite</item>
        <item>@string/strColorGray</item>
        <item>@string/strColorGreen</item>
    </array>
    <string name="btnDelete">Eliminar</string>
    <string name="dialog_update_car_success">Actualización de datos exitosa.</string>
    <string name="dialog_update_car_fail">Error al actualizar los datos.</string>
    <string name="dialog_update_car_confirm">¿Está seguro que desea eliminar este automóvil del sistema?</string>
    <string name="tvTitleCarAdd">Registrar automóvil</string>
    <string name="brand1">VOLKS WAGEN</string>
    <string name="brand2">CHEVROLET</string>
    <string name="brand3">FORD</string>
    <string name="brand4">KIA</string>
    <string name="brand5">NISSAN</string>
    <string name="brand6">GM</string>
    <string name="brand7">ITALIKA</string>
    <string name="brand8">VENTO</string>
    <string name="brand9">CHRYSLER</string>
    <string name="brand10">HONDA</string>
    <string name="brand11">HYUNDAI</string>
    <array name="arrayCarBrands">
        <item>@string/brand1</item>
        <item>@string/brand2</item>
        <item>@string/brand3</item>
        <item>@string/brand4</item>
        <item>@string/brand5</item>
        <item>@string/brand6</item>
        <item>@string/brand7</item>
        <item>@string/brand8</item>
        <item>@string/brand9</item>
        <item>@string/brand10</item>
        <item>@string/brand11</item>
    </array>
    <string name="dialog_create_car_success">Vehículo registrado con éxito.</string>
    <string name="dialog_create_car_fail">Error al registrar vehículo.</string>

    <!--Reportes-->
    <string name="tvTitleReportes">Reportes</string>
    <string name="tvSubtitleReportes">Historial de reportes de mantenimiento</string>
    <string name="tvInstructionsReportes">Seleccione uno de sus reportes no atendidos para modificarlo o genere uno nuevo con el botón +.</string>

    <!--Quejas-->
    <string name="tvTitleQuejas">Quejas</string>
    <string name="tvSubtitleQuejas">Historial de quejas</string>
    <string name="tvInstructionsQuejas">Seleccione uno de sus reportes de queja no atendidos para modificarlo o genere uno nuevo con el botón +.</string>

    <!--General dialog-->
    <string name="dialog_warning_title">Aviso</string>
    <string name="dialog_error_title">Error</string>
    <string name="accept">Aceptar</string>

    <!--DB-API Conection-->
    <string name="dbAPI">https://isw-api.000webhostapp.com/</string>

    <!--Nav drawer items-->
    <string name="action_settings">Acerca de</string>
    <string name="action_search">Buscar</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_profile</item>
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_visitas</item>
        <item>@string/nav_item_reservas</item>
        <item>@string/nav_item_automoviles</item>
        <item>@string/nav_item_reportes</item>
        <item>@string/nav_item_quejas</item>
    </string-array>
    <string name="nav_item_home">Inicio</string>
    <string name="nav_item_profile">Mi información</string>
    <string name="nav_item_visitas">Visitas</string>
    <string name="nav_item_reservas">Reservas</string>
    <string name="nav_item_automoviles">Automóviles</string>
    <string name="nav_item_reportes">Reportes</string>
    <string name="nav_item_quejas">Quejas</string>
</resources>