<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ViewController.MainActivity"
    style="@style/login">

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/imgLoginStyle"/>
    <TextView
        android:id="@+id/xtvTitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogin"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:text="@string/tvTitleLogin"/>
    <ImageView
        android:id="@+id/imgCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/xtvTitleLogin"
        style="@style/loginMailIcon"/>
    <EditText
        android:id="@+id/xetCorreoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/xtvTitleLogin"
        android:layout_toRightOf="@id/imgCorreo"
        android:inputType="textEmailAddress"
        android:hint="@string/etHintCorreo"/>
    <ImageView
        android:id="@+id/imgContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/xetCorreoLogin"
        style="@style/loginPassIcon"/>
    <EditText
        android:id="@+id/xetContrasenaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/xetCorreoLogin"
        android:layout_toRightOf="@id/imgContrasena"
        android:layout_toLeftOf="@id/btnShowPassword"
        android:inputType="textPassword"
        android:hint="@string/etHintContrasena"/>
    <ImageButton
        android:id="@+id/btnShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/xetCorreoLogin"
        style="@style/showPassword"/>
    <Button
        android:id="@+id/xbtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/xetContrasenaLogin"
        android:layout_centerHorizontal="true"
        android:text="@string/btnLogin"
        style="@style/mainButton"/>
    <Button
        android:id="@+id/xbtnForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/xbtnAccount"
        android:layout_centerHorizontal="true"
        android:text="@string/btnForgot"
        style="@style/normalButton"/>
    <Button
        android:id="@+id/xbtnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvcopyright"
        android:layout_centerHorizontal="true"
        android:text="@string/btnAccount"
        style="@style/normalButton"/>
    <TextView
        android:id="@+id/tvcopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:text="@string/copyright"/>

</RelativeLayout>