<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/cardActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCarEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:title="@string/tvTitleCarEdit"
        style="@style/toolbarForgot"
        app:navigationIcon="@drawable/ic_back_24"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarCarEdit"
        style="@style/card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvBrandTag"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tvBrandDynamic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardBrand"
        style="@style/card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvModelTag"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tvModelDynamic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPlates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardModel"
        style="@style/card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvPlatesTag"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tvPlateDynamic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardCarColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardPlates"
        style="@style/card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvCarColorTag"
                android:textSize="20sp"/>
            <Spinner
                android:id="@+id/spnCarColor"
                android:layout_width="match_parent"
                android:layout_height="50sp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <LinearLayout
        android:id="@+id/layoutButtonsCarEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardCarColor"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCarCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:layout_marginEnd="5dp"
            style="@style/normalButton"/>
        <Button
            android:id="@+id/btnCarSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            android:layout_marginStart="5dp"
            style="@style/mainButton"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnCarDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutButtonsCarEdit"
        android:layout_centerHorizontal="true"
        android:text="@string/btnDelete"
        android:layout_marginVertical="30dp"
        style="@style/badButton"/>
</RelativeLayout>