<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/cardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarProfileEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/tvTitleEditProfile"
        style="@style/toolbarForgot"
        app:navigationIcon="@drawable/ic_back_24"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarProfileEdit"
        style="@style/card">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvCurpEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/tvInfo2"/>
            <EditText
                android:id="@+id/etCurpEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCurpEdit"/>
            <TextView
                android:id="@+id/tvBirthdayEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etCurpEdit"
                android:textSize="20sp"
                android:text="@string/tvInfo3"/>
            <EditText
                android:id="@+id/etBirthdayEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBirthdayEdit"
                android:layout_toLeftOf="@id/btnCalendar"
                android:enabled="false"
                android:hint="01-01-1999"/>
            <ImageButton
                android:id="@+id/btnCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBirthdayEdit"
                android:layout_alignParentRight="true"
                style="@style/btnCalendar"/>
            <TextView
                android:id="@+id/tvSexEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etBirthdayEdit"
                android:textSize="20sp"
                android:text="@string/tvInfo4"/>
            <Spinner
                android:id="@+id/spnSexEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSexEdit"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/spnSexEdit"
                android:layout_centerHorizontal="true">
                <Button
                    android:id="@+id/btnCancelEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnCancel"
                    style="@style/normalButton"
                    android:layout_marginEnd="5dp"/>
                <Button
                    android:id="@+id/btnSaveEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSave"
                    android:layout_marginStart="5dp"
                    style="@style/mainButton" />
            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>