<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/cardActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgUserProfile"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            style="@style/imgUser"/>
        <TextView
            android:id="@+id/xtvNombreProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgUserProfile"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:text="@string/tvNombreProfile"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardContract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/xtvNombreProfile"
            style="@style/card">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/xtvSubtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="20dp"
                    android:textSize="20sp"
                    android:text="@string/tvSubtitle1"/>
                <TextView
                    android:id="@+id/xtvInfo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/xtvSubtitle1"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="20dp"
                    android:layout_toLeftOf="@id/btnCopy"
                    android:textSize="15sp"
                    android:text="@string/tvInfo1"/>
                <ImageButton
                    android:id="@+id/btnCopy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="20dp"
                    style="@style/btnCopyStyle"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:id="@+id/xtvSubtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/cardContract"
            android:paddingLeft="20dp"
            android:textSize="20sp"
            android:text="@string/tvSubtitle2"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardCurp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/xtvSubtitle2"
            style="@style/card">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/xtvInfo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="20dp"
                    android:textSize="15sp"
                    android:text="@string/tvInfo2"/>
                <TextView
                    android:id="@+id/xtvCURP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/xtvInfo2"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/xtvInfo3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/xtvCURP"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="20dp"
                    android:textSize="15sp"
                    android:text="@string/tvInfo3"/>
                <TextView
                    android:id="@+id/xtvFechNac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/xtvInfo3"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/xtvInfo4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/xtvFechNac"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="20dp"
                    android:textSize="15sp"
                    android:text="@string/tvInfo4"/>
                <TextView
                    android:id="@+id/xtvSexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/xtvInfo4"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />
                <Button
                    android:id="@+id/btnEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/xtvInfo4"
                    android:layout_centerHorizontal="true"
                    android:text="@string/btnEditar"
                    style="@style/normalButton"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardCurp"
            android:layout_centerHorizontal="true"
            android:text="@string/btnLogout"
            style="@style/badButton"/>
    </RelativeLayout>
</ScrollView>
